Fixed mobile cut off issue by incr. max-height

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -269,7 +269,7 @@ strong {
   border-top: 2px solid #00A1E0;
   height: auto;
   margin: -25px auto 0px;
-  max-height: 500px;
+  max-height: 600px;
   overflow: hidden;
   padding: 20px;
   -moz-transition-duration: 0.3s;
